library shelf and bug squash

--- a/client/src/components/Landing/style.css
+++ b/client/src/components/Landing/style.css
@@ -1,6 +1,6 @@
 .wrapperImg{
     background-color: rgb(143, 143, 180);
-    background-image: url("./brown-design-hardwood-955454.jpg");
+    background-image: url("./shelf.jpeg");
     /* background-repeat: no-repeat; */
     /* display: inline; */
     /* background-size: 1200px 450px; */
